@@ -1,48 +1,52 @@
 package team.rusty.bumpkinbatch.worldgen;
 
-import net.minecraft.data.worldgen.BiomeDefaultFeatures;
-import net.minecraft.data.worldgen.Features;
-import net.minecraft.util.valueproviders.ConstantInt;
-import net.minecraft.world.entity.MobCategory;
-import net.minecraft.world.level.biome.Biome;
-import net.minecraft.world.level.biome.BiomeSpecialEffects;
-import net.minecraft.world.level.biome.MobSpawnSettings;
-import net.minecraft.world.level.block.Blocks;
-import net.minecraft.world.level.block.state.properties.BlockStateProperties;
-import net.minecraft.world.level.levelgen.GenerationStep;
-import net.minecraft.world.level.levelgen.Heightmap;
-import net.minecraft.world.level.levelgen.feature.Feature;
-import net.minecraft.world.level.levelgen.feature.blockplacers.SimpleBlockPlacer;
-import net.minecraft.world.level.levelgen.feature.configurations.*;
-import net.minecraft.world.level.levelgen.feature.featuresize.TwoLayersFeatureSize;
-import net.minecraft.world.level.levelgen.feature.foliageplacers.BushFoliagePlacer;
-import net.minecraft.world.level.levelgen.feature.stateproviders.SimpleStateProvider;
-import net.minecraft.world.level.levelgen.feature.trunkplacers.StraightTrunkPlacer;
-import net.minecraft.world.level.levelgen.placement.FeatureDecorator;
-import net.minecraft.world.level.levelgen.placement.FrequencyWithExtraChanceDecoratorConfiguration;
-import net.minecraft.world.level.levelgen.surfacebuilders.SurfaceBuilder;
+import com.google.common.collect.ImmutableSet;
+import net.minecraft.block.Blocks;
+import net.minecraft.entity.EntityClassification;
+import net.minecraft.state.properties.BlockStateProperties;
+import net.minecraft.world.biome.Biome;
+import net.minecraft.world.biome.BiomeAmbience;
+import net.minecraft.world.biome.DefaultBiomeFeatures;
+import net.minecraft.world.biome.MobSpawnInfo;
+import net.minecraft.world.gen.GenerationStage;
+import net.minecraft.world.gen.blockplacer.SimpleBlockPlacer;
+import net.minecraft.world.gen.blockstateprovider.SimpleBlockStateProvider;
+import net.minecraft.world.gen.feature.BaseTreeFeatureConfig;
+import net.minecraft.world.gen.feature.BlockClusterFeatureConfig;
+import net.minecraft.world.gen.feature.BlockStateProvidingFeatureConfig;
+import net.minecraft.world.gen.feature.Feature;
+import net.minecraft.world.gen.feature.FeatureSpread;
+import net.minecraft.world.gen.feature.Features;
+import net.minecraft.world.gen.feature.NoFeatureConfig;
+import net.minecraft.world.gen.feature.TwoLayerFeature;
+import net.minecraft.world.gen.foliageplacer.BushFoliagePlacer;
+import net.minecraft.world.gen.placement.AtSurfaceWithExtraConfig;
+import net.minecraft.world.gen.placement.NoPlacementConfig;
+import net.minecraft.world.gen.placement.Placement;
+import net.minecraft.world.gen.surfacebuilders.SurfaceBuilder;
+import net.minecraft.world.gen.trunkplacer.StraightTrunkPlacer;
 import net.minecraftforge.common.BiomeManager;
 import net.minecraftforge.common.world.BiomeGenerationSettingsBuilder;
 import team.rusty.bumpkinbatch.registry.BEntities;
 import team.rusty.bumpkinbatch.registry.BWorldGen;
 import team.rusty.util.worldgen.biome.AbstractBiome;
 
+import java.util.Collections;
 import java.util.List;
-import java.util.Set;
 
 public class PumpkinPatchBiome extends AbstractBiome {
     @Override
-    public void configure(BiomeGenerationSettingsBuilder generation, MobSpawnSettings.Builder spawns) {
+    public void configure(BiomeGenerationSettingsBuilder generation, MobSpawnInfo.Builder spawns) {
         // Properties
-        precipitation = Biome.Precipitation.RAIN;
-        category = Biome.BiomeCategory.PLAINS;
+        precipitation = Biome.RainType.RAIN;
+        category = Biome.Category.PLAINS;
         depth = 0.1f;
         scale = 0.05f;
         temperature = 0.9f;
         downfall = 0.5f;
 
         // Effects
-        effects = new BiomeSpecialEffects.Builder()
+        effects = new BiomeAmbience.Builder()
                 .skyColor(0xffcdab)
                 .fogColor(0xffcdab)
                 .waterColor(0x3f76e4)
@@ -51,18 +55,17 @@ public class PumpkinPatchBiome extends AbstractBiome {
                 .foliageColorOverride(0xc5d141)
                 .build();
 
-        BiomeDefaultFeatures.addDefaultCrystalFormations(generation);
-        BiomeDefaultFeatures.addDefaultCarvers(generation);
-        BiomeDefaultFeatures.addDefaultOres(generation);
-        BiomeDefaultFeatures.addDefaultSoftDisks(generation);
-        BiomeDefaultFeatures.addDefaultUndergroundVariety(generation);
-        BiomeDefaultFeatures.addDefaultLakes(generation);
-        BiomeDefaultFeatures.addDefaultSprings(generation);
-        BiomeDefaultFeatures.addDefaultMonsterRoom(generation);
-        BiomeDefaultFeatures.addPlainGrass(generation);
-        BiomeDefaultFeatures.addDefaultGrass(generation);
-        BiomeDefaultFeatures.addDefaultUndergroundVariety(generation);
-        BiomeDefaultFeatures.addSurfaceFreezing(generation);
+        DefaultBiomeFeatures.addDefaultCarvers(generation);
+        DefaultBiomeFeatures.addDefaultOres(generation);
+        DefaultBiomeFeatures.addDefaultSoftDisks(generation);
+        DefaultBiomeFeatures.addDefaultUndergroundVariety(generation);
+        DefaultBiomeFeatures.addDefaultLakes(generation);
+        DefaultBiomeFeatures.addDefaultSprings(generation);
+        DefaultBiomeFeatures.addDefaultMonsterRoom(generation);
+        DefaultBiomeFeatures.addPlainGrass(generation);
+        DefaultBiomeFeatures.addDefaultGrass(generation);
+        DefaultBiomeFeatures.addDefaultUndergroundVariety(generation);
+        DefaultBiomeFeatures.addSurfaceFreezing(generation);
 
 
         generation.surfaceBuilder(SurfaceBuilder.DEFAULT.configured(SurfaceBuilder.CONFIG_GRASS));
@@ -73,58 +76,58 @@ public class PumpkinPatchBiome extends AbstractBiome {
         generation.addStructureStart(BWorldGen.HAUNTED_HOUSE.get().configured());
 
         // Grave Stones
-        generation.addFeature(GenerationStep.Decoration.SURFACE_STRUCTURES, BWorldGen.GRAVESTONE_FEATURE.get()
-                .configured(NoneFeatureConfiguration.INSTANCE)
-                .decorated(FeatureDecorator.HEIGHTMAP.configured(new HeightmapConfiguration(Heightmap.Types.MOTION_BLOCKING_NO_LEAVES)))
-                .decorated(FeatureDecorator.SQUARE.configured(new NoneDecoratorConfiguration()))
-                .decorated(FeatureDecorator.COUNT_EXTRA.configured(new FrequencyWithExtraChanceDecoratorConfiguration(0, 0.5f, 1))));  // (# spawned guaranteed per chunk, chance spawn extra per chunk, count extra per chunk)
+        generation.addFeature(GenerationStage.Decoration.SURFACE_STRUCTURES, BWorldGen.GRAVESTONE_FEATURE.get()
+                .configured(NoFeatureConfig.INSTANCE)
+                .decorated(Placement.HEIGHTMAP.configured(NoPlacementConfig.INSTANCE))
+                .decorated(Placement.SQUARE.configured(NoPlacementConfig.INSTANCE))
+                .decorated(Placement.COUNT_EXTRA.configured(new AtSurfaceWithExtraConfig(0, 0.5f, 1))));  // (# spawned guaranteed per chunk, chance spawn extra per chunk, count extra per chunk)
         // Pumpkins
-        generation.addFeature(GenerationStep.Decoration.VEGETAL_DECORATION, Feature.RANDOM_PATCH
-                .configured(new RandomPatchConfiguration.GrassConfigurationBuilder(new SimpleStateProvider(Blocks.PUMPKIN.defaultBlockState()), SimpleBlockPlacer.INSTANCE)
-                        .whitelist(Set.of(Blocks.GRASS_BLOCK))
+        generation.addFeature(GenerationStage.Decoration.VEGETAL_DECORATION, Feature.RANDOM_PATCH
+                .configured(new BlockClusterFeatureConfig.Builder(new SimpleBlockStateProvider(Blocks.PUMPKIN.defaultBlockState()), SimpleBlockPlacer.INSTANCE)
+                        .whitelist(ImmutableSet.of(Blocks.GRASS_BLOCK))
                         .build()));
         // Cross
-//        generation.addFeature(GenerationStep.Decoration.SURFACE_STRUCTURES, BWorldGen.CROSS_FEATURE.get()
+//        generation.addFeature(GenerationStage.Decoration.SURFACE_STRUCTURES, BWorldGen.CROSS_FEATURE.get()
 //                .configured(new BlockStateConfiguration(Blocks.COBBLESTONE.defaultBlockState()))
-//                .decorated(FeatureDecorator.HEIGHTMAP.configured(new HeightmapConfiguration(Heightmap.Types.MOTION_BLOCKING_NO_LEAVES)))
-//                .decorated(FeatureDecorator.SQUARE.configured(new NoneDecoratorConfiguration()))
-//                .decorated(FeatureDecorator.COUNT_EXTRA.configured(new FrequencyWithExtraChanceDecoratorConfiguration(0, 0.05f, 1))));
+//                .decorated(Placement.HEIGHTMAP))
+//                .decorated(Placement.SQUARE.configured(new NoneDecoratorConfiguration()))
+//                .decorated(Placement.COUNT_EXTRA.configured(new AtSurfaceWithExtraConfig(0, 0.05f, 1))));
         // Hay bales
-        generation.addFeature(GenerationStep.Decoration.SURFACE_STRUCTURES, Feature.BLOCK_PILE
-                .configured(new BlockPileConfiguration(new SimpleStateProvider(Blocks.HAY_BLOCK.defaultBlockState())))
-                .decorated(FeatureDecorator.SQUARE.configured(new NoneDecoratorConfiguration()))
-                .decorated(FeatureDecorator.HEIGHTMAP.configured(new HeightmapConfiguration(Heightmap.Types.MOTION_BLOCKING_NO_LEAVES)))
-                .decorated(FeatureDecorator.COUNT_EXTRA.configured(new FrequencyWithExtraChanceDecoratorConfiguration(0, 0.1f, 1))));
+        generation.addFeature(GenerationStage.Decoration.SURFACE_STRUCTURES, Feature.BLOCK_PILE
+                .configured(new BlockStateProvidingFeatureConfig(new SimpleBlockStateProvider(Blocks.HAY_BLOCK.defaultBlockState())))
+                .decorated(Placement.SQUARE.configured(NoPlacementConfig.INSTANCE))
+                .decorated(Placement.HEIGHTMAP.configured(NoPlacementConfig.INSTANCE))
+                .decorated(Placement.COUNT_EXTRA.configured(new AtSurfaceWithExtraConfig(0, 0.1f, 1))));
         // Lone trees
-        generation.addFeature(GenerationStep.Decoration.VEGETAL_DECORATION, Features.FANCY_OAK
-                .decorated(FeatureDecorator.SQUARE.configured(new NoneDecoratorConfiguration()))
-                .decorated(FeatureDecorator.HEIGHTMAP.configured(new HeightmapConfiguration(Heightmap.Types.MOTION_BLOCKING_NO_LEAVES)))
-                .decorated(FeatureDecorator.COUNT_EXTRA.configured(new FrequencyWithExtraChanceDecoratorConfiguration(0, 0.3f, 1))));
+        generation.addFeature(GenerationStage.Decoration.VEGETAL_DECORATION, Features.FANCY_OAK
+                .decorated(Placement.SQUARE.configured(NoPlacementConfig.INSTANCE))
+                .decorated(Placement.HEIGHTMAP.configured(NoPlacementConfig.INSTANCE))
+                .decorated(Placement.COUNT_EXTRA.configured(new AtSurfaceWithExtraConfig(0, 0.3f, 1))));
         // Leaf piles
-        generation.addFeature(GenerationStep.Decoration.SURFACE_STRUCTURES, Feature.BLOCK_PILE
-                .configured(new BlockPileConfiguration(new SimpleStateProvider(Blocks.OAK_LEAVES.defaultBlockState().setValue(BlockStateProperties.PERSISTENT, true))))
-                .decorated(FeatureDecorator.SQUARE.configured(new NoneDecoratorConfiguration()))
-                .decorated(FeatureDecorator.HEIGHTMAP.configured(new HeightmapConfiguration(Heightmap.Types.MOTION_BLOCKING_NO_LEAVES)))
-                .decorated(FeatureDecorator.COUNT_EXTRA.configured(new FrequencyWithExtraChanceDecoratorConfiguration(2, 0.4f, 1))));
+        generation.addFeature(GenerationStage.Decoration.SURFACE_STRUCTURES, Feature.BLOCK_PILE
+                .configured(new BlockStateProvidingFeatureConfig(new SimpleBlockStateProvider(Blocks.OAK_LEAVES.defaultBlockState().setValue(BlockStateProperties.PERSISTENT, true))))
+                .decorated(Placement.SQUARE.configured(NoPlacementConfig.INSTANCE))
+                .decorated(Placement.HEIGHTMAP.configured(NoPlacementConfig.INSTANCE))
+                .decorated(Placement.COUNT_EXTRA.configured(new AtSurfaceWithExtraConfig(2, 0.4f, 1))));
         // Bush tree
-        generation.addFeature(GenerationStep.Decoration.VEGETAL_DECORATION, Feature.TREE
-                .configured((new TreeConfiguration.TreeConfigurationBuilder(new SimpleStateProvider(Blocks.OAK_LOG.defaultBlockState()),
+        generation.addFeature(GenerationStage.Decoration.VEGETAL_DECORATION, Feature.TREE
+                .configured((new BaseTreeFeatureConfig.Builder(
+                        new SimpleBlockStateProvider(Blocks.OAK_LOG.defaultBlockState()),
+                        new SimpleBlockStateProvider(Blocks.OAK_LEAVES.defaultBlockState()),
+                        new BushFoliagePlacer(FeatureSpread.fixed(2), FeatureSpread.fixed(1), 2),
                         new StraightTrunkPlacer(1, 0, 0),
-                        new SimpleStateProvider(Blocks.OAK_LEAVES.defaultBlockState()),
-                        new SimpleStateProvider(Blocks.OAK_SAPLING.defaultBlockState()),
-                        new BushFoliagePlacer(ConstantInt.of(2), ConstantInt.of(1), 2),
-                        new TwoLayersFeatureSize(0, 0, 0))).build())
-                .decorated(FeatureDecorator.SQUARE.configured(new NoneDecoratorConfiguration()))
-                .decorated(FeatureDecorator.HEIGHTMAP.configured(new HeightmapConfiguration(Heightmap.Types.MOTION_BLOCKING_NO_LEAVES))));
+                        new TwoLayerFeature(0, 0, 0))).build())
+                .decorated(Placement.SQUARE.configured(NoPlacementConfig.INSTANCE))
+                .decorated(Placement.HEIGHTMAP.configured(NoPlacementConfig.INSTANCE)));
 
-        BiomeDefaultFeatures.monsters(spawns, 19, 1, 100);
-        BiomeDefaultFeatures.commonSpawns(spawns);
+        DefaultBiomeFeatures.monsters(spawns, 19, 1, 100);
+        DefaultBiomeFeatures.commonSpawns(spawns);
 
-        spawns.addSpawn(MobCategory.MONSTER, new MobSpawnSettings.SpawnerData(BEntities.REAPER.get(), 5, 1, 1));
+        spawns.addSpawn(EntityClassification.MONSTER, new MobSpawnInfo.Spawners(BEntities.REAPER.get(), 5, 1, 1));
     }
 
     @Override
     public List<SpawnEntry> getSpawnEntries() {
-        return List.of(SpawnEntry.of(BiomeManager.BiomeType.WARM, 3));
+        return Collections.singletonList(SpawnEntry.of(BiomeManager.BiomeType.WARM, 3));
     }
 }
